Kommentare zu classes, repositories und service Packages hinzugefügt und unnötige Klassen gelöscht