@@ -11,6 +11,14 @@ import jakarta.transaction.Transactional;
 
 import java.time.LocalDate;
 
+/**
+ * Service-Klasse für den Kauf von ETFs.
+ *
+ * Diese Klasse kapselt die Logik für den Kauf von ETFs, einschließlich Kursabfrage,
+ * Erstellung und Speicherung der Kauf-Transaktion sowie Aktualisierung des Depots.
+ *
+ * @author Sören Heß
+ */
 @Service
 public class ETFKaufService {
     private final DepotWertpapierRepository depotWertpapierRepository;
@@ -18,6 +26,14 @@ public class ETFKaufService {
     private final KursRepository kursRepository;
     private final WertpapierRepository wertpapierRepository;
 
+    /**
+     * Konstruktor für ETFKaufService.
+     *
+     * @param depotWertpapierRepository Repository für DepotWertpapiere
+     * @param transaktionRepository     Repository für Transaktionen
+     * @param kursRepository            Repository für Kursdaten
+     * @param wertpapierRepository      Repository für Wertpapiere
+     */
     @Autowired
     public ETFKaufService(DepotWertpapierRepository depotWertpapierRepository,
                           TransaktionRepository transaktionRepository, KursRepository kursRepository,
@@ -28,6 +44,13 @@ public class ETFKaufService {
         this.wertpapierRepository = wertpapierRepository;
     }
 
+    /**
+     * Gibt den aktuellen Kurs für das angegebene Symbol zurück.
+     *
+     * @param symbol Das ETF-Symbol
+     * @return Der aktuelle Schlusskurs
+     * @throws RuntimeException wenn kein Kurs gefunden wird
+     */
     public double getKursFuerSymbol(String symbol) {
         return kursRepository.findByWertpapierSymbolOrderByDatumAsc(symbol)
                 .stream()
@@ -36,6 +59,19 @@ public class ETFKaufService {
                 .getSchlusskurs();
     }
 
+    /**
+     * Kauft einen ETF und aktualisiert das Depot entsprechend.
+     *
+     * Prüft, ob der ETF und Kursdaten vorhanden sind, aktualisiert oder erstellt das DepotWertpapier,
+     * speichert die Kauf-Transaktion und gibt den gekauften ETF zurück.
+     *
+     * @param symbol       Das ETF-Symbol
+     * @param stueckzahl   Anzahl der zu kaufenden Anteile
+     * @param handelsplatz Handelsplatz des Kaufs
+     * @param depot        Das Depot, in das gekauft wird
+     * @return Der gekaufte ETF
+     * @throws RuntimeException wenn ETF oder Kurs nicht gefunden werden
+     */
     @Transactional
     public ETF kaufeETF(String symbol, int stueckzahl, String handelsplatz, Depot depot) {
         ETF etf = (ETF) wertpapierRepository.findBySymbol(symbol)
@@ -45,11 +81,11 @@ public class ETFKaufService {
         if (kurse.isEmpty()) {
             throw new RuntimeException("Kein Kurs für Symbol " + symbol + " gefunden.");
         }
-        double letzterKurs = kurse.get(0).getSchlusskurs();
+        double letzterKurs = kurse.getFirst().getSchlusskurs();
 
         DepotWertpapier dwp = depotWertpapierRepository
                 .findByDepotAndWertpapier(depot, etf)
-                .orElse(new DepotWertpapier(depot, etf, 0, Double.valueOf(0.0)));
+                .orElse(new DepotWertpapier(depot, etf, 0, 0.0));
 
         dwp.setAnzahl(dwp.getAnzahl() + stueckzahl);
         dwp.setEinstandspreis(letzterKurs);
